--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 
   <!-- Hero Section -->
   <section class="hero">
+    <!-- Wave Divider Top -->
+    <div class="wave-divider top">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
     <div class="container hero-content">
       <div class="hero-text">
         <h1>Professional Outdoor & Transport Services</h1>
@@ -36,10 +42,22 @@
         <div class="img-placeholder">Hero Image</div>
       </div>
     </div>
+    <!-- Wave Divider Bottom -->
+    <div class="wave-divider bottom">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
   </section>
 
   <!-- Services Section -->
   <section class="services" id="services">
+    <!-- Wave Divider Top -->
+    <div class="wave-divider top">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
     <div class="container">
       <h2>Our Popular Services</h2>
       <div class="services-grid">
@@ -70,10 +88,22 @@
         </div>
       </div>
     </div>
+    <!-- Wave Divider Bottom -->
+    <div class="wave-divider bottom">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
   </section>
 
   <!-- How We Work Section -->
   <section class="process">
+    <!-- Wave Divider Top -->
+    <div class="wave-divider top">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
     <div class="container">
       <h2>How We Work</h2>
       <div class="process-steps">
@@ -95,10 +125,22 @@
         </div>
       </div>
     </div>
+    <!-- Wave Divider Bottom -->
+    <div class="wave-divider bottom">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
   </section>
 
   <!-- Equipment Section -->
   <section class="equipment">
+    <!-- Wave Divider Top -->
+    <div class="wave-divider top">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
     <div class="container">
       <h2>Our Equipment</h2>
       <div class="equipment-grid">
@@ -109,10 +151,22 @@
         <div class="img-placeholder">Car Transporter</div>
       </div>
     </div>
+    <!-- Wave Divider Bottom -->
+    <div class="wave-divider bottom">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
   </section>
 
   <!-- Why Choose Us Section -->
   <section class="why-us" id="about">
+    <!-- Wave Divider Top -->
+    <div class="wave-divider top">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
     <div class="container why-flex">
       <div class="why-text">
         <h2>Why Choose GreenScape?</h2>
@@ -127,10 +181,22 @@
         <div class="img-placeholder">Team Image</div>
       </div>
     </div>
+    <!-- Wave Divider Bottom -->
+    <div class="wave-divider bottom">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
   </section>
 
   <!-- FAQ Section -->
   <section class="faq" id="faq">
+    <!-- Wave Divider Top -->
+    <div class="wave-divider top">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
     <div class="container">
       <h2>Frequently Asked Questions</h2>
       <div class="faq-list">
@@ -152,10 +218,22 @@
         </div>
       </div>
     </div>
+    <!-- Wave Divider Bottom -->
+    <div class="wave-divider bottom">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
   </section>
 
   <!-- Contact Section -->
   <section class="contact" id="contact">
+    <!-- Wave Divider Top -->
+    <div class="wave-divider top">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
     <div class="container contact-flex">
       <div class="contact-form">
         <h2>Contact Us</h2>
@@ -171,6 +249,12 @@
         <div class="img-placeholder">Contact Image</div>
       </div>
     </div>
+    <!-- Wave Divider Bottom -->
+    <div class="wave-divider bottom">
+      <svg viewBox="0 0 1440 100" preserveAspectRatio="none" style="width:100%;height:100px;display:block;">
+        <path d="M0,40 C480,120 960,0 1440,80 L1440,100 L0,100 Z" fill="#27ae60"/>
+      </svg>
+    </div>
   </section>
 
   <!-- Footer -->
@@ -178,7 +262,7 @@
     <div class="container footer-flex">
       <div class="footer-logo">GreenScape</div>
       <div class="footer-info">
-        <p>&copy; 2024 GreenScape. All rights reserved.</p>
+        <p>&copy; 2025 GreenScape. All rights reserved.</p>
         <p>Follow us:
           <a href="#">Facebook</a> |
           <a href="#">Instagram</a> |
